--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -512,7 +512,7 @@
         <td>
           <div class="info-group">
             <div class="label">Precip</div>
-            <div><span data-wind></span><span class="value-sub-info">in</span></div>
+            <div><span data-precip></span><span class="value-sub-info">in</span></div>
           </div>
         </td>
       </tr>
